fix: adjust fullscreen behavior for vertical tabs to improve visibility and interaction

--- a/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs-topbar.inc.css
+++ b/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs-topbar.inc.css
@@ -4,10 +4,6 @@ height: var(--zen-toolbar-height);
   & {
     transition: height 0.2s ease-out, opacity 0.2s ease-out;
     transition-delay: 0.05s;
-
-    :root[inDOMFullscreen='true'] & {
-      max-height: 0;
-    }
   }
 
   &:not([zen-has-hover='true']):not([has-popup-menu]):not(:focus-within) {
@@ -19,4 +15,11 @@ height: var(--zen-toolbar-height);
       pointer-events: none;
     }
   }
+}
+
+:root[inDOMFullscreen='true'] & {
+  max-height: 0;
+  min-height: unset !important;
+  opacity: 0;
+  pointer-events: none;
 }
